[gd_scene load_steps=9 format=2]

[ext_resource path="res://scenes/ui/playState/HealthBar.gd" type="Script" id=1]
[ext_resource path="res://assets/images/ui/healthBar.png" type="Texture" id=2]
[ext_resource path="res://assets/images/icons/face.png" type="Texture" id=3]
[ext_resource path="res://assets/fonts/vcr.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://scripts/HealthIcon.gd" type="Script" id=6]

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0, 0.917647, 0.145098, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 1, 0, 0, 1 )

[sub_resource type="DynamicFont" id=1]
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 5 )

[node name="HealthBar" type="Node2D"]
script = ExtResource( 1 )

[node name="barBG" type="Sprite" parent="."]
modulate = Color( 0, 0, 0, 1 )
texture = ExtResource( 2 )

[node name="ProgressBar" type="ProgressBar" parent="."]
margin_left = -296.0
margin_top = -5.0
margin_right = 296.0
margin_bottom = 9.0
rect_scale = Vector2( -1, 0.75 )
rect_pivot_offset = Vector2( 296, 0 )
custom_styles/fg = SubResource( 2 )
custom_styles/bg = SubResource( 3 )
max_value = 2.0
value = 1.0
percent_visible = false

[node name="iconP2" type="Sprite" parent="."]
position = Vector2( -48, -75 )
texture = ExtResource( 3 )
offset = Vector2( 0, 75 )
hframes = 3
script = ExtResource( 6 )

[node name="iconP1" type="Sprite" parent="."]
position = Vector2( 48, -75 )
texture = ExtResource( 3 )
offset = Vector2( 0, 75 )
flip_h = true
hframes = 3
script = ExtResource( 6 )

[node name="scoreTxt" type="Label" parent="."]
margin_left = -389.0
margin_top = 37.0
margin_right = 392.0
margin_bottom = 52.0
rect_pivot_offset = Vector2( 390, 7 )
custom_fonts/font = SubResource( 1 )
text = "---"
align = 1
